--- a/pages/cv.html
+++ b/pages/cv.html
@@ -15,6 +15,7 @@
         <title>Portfolio d'Amélia Pilou (BTS SIO 2027)</title>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
               rel="stylesheet">
+        <link href="../css/cv.css" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
@@ -122,14 +123,19 @@
                 integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
         <div class="jumbotron">
-            <h1>Bonjour et bienvenue sur mon portfolio !</h1>
-            <img src="images/AmeliaPilou.jpg" alt="photo d'Amélia Pilou"/>
-            <p>Je m'appelle Amélia Pilou, j'ai 21 ans et ce site a pour vocation de me présenter en tant que personne, en tant qu'étudiante
-                et candidate à l'obtention du BTS SIO en tant que future professionnelle de l'informatique.</p>   
-            <a class="btn btn-secondary" href="https://github.com/RenzoBagnoli/ameliapilou.github.io"
-               target="_blank" role="button">En savoir plus »</a>
-
-        </div> <!-- Emplacement pour le contenu principal de la page -->
+            <div class="container">
+                <div class="row">
+                    <div class="text-center">
+                        <div>
+                            <img src="../images/AmeliaPilou.jpg" alt="Ma photo d'identité">
+                        </div>
+                        <div>
+                            <h1>Bonjour, je m'appelle Amélia et voici mon CV</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer>
             <div class="container">
                 <div class="row">
